--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,16 @@ input[type="button"],input[type="submit"]{
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
 }
-h1,h2,h3,h4,h5,h6{
+h2,h3,h4,h5,h6{
 	margin:0;	
 	padding:0;
 	font-family: 'Ubuntu Condensed', sans-serif;
+}
+h1{
+	margin:0;	
+	padding:0;
+	font-family: 'Ubuntu Condensed', sans-serif;
+	font-size: 200%
 }	
 p{
 	margin:0;
